agrego citas, escribo conclusiones

--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -183,3 +183,10 @@ author = {Jesse Hughes and Bart Jacobs},
   publisher={Springer New York, NY},
   doi={https://doi.org/10.1007/978-1-4612-9860-1}
 }
+
+@unpublished{danielsson:2018,
+  title={Total Definitional Interpreters for Looping Programs},
+  author={Nils Anders Danielsson},
+  year={2018},
+  url={https://www.cse.chalmers.se/~nad/publications/danielsson-definitional-interpreters-looping.html}
+}
