--- a/doc/tex/casodelay.tex
+++ b/doc/tex/casodelay.tex
@@ -379,7 +379,7 @@ Dada la dificultad de reconocimiento de términos iguales y el problema con el c
 
 Luego de descartar la notación musical como soporte para la coinducción, los \textit{sized types} fueron la opción elegida. Como se introdujo en la sección \ref{coind:agda:sized}, estos poseen índices que ayudan en el chequeo de terminación, por lo que el objetivo de esta sección es ver si los problemas con tal chequeo encontrados en la notación musical están presentes también en esta notación o no. 
 
-En caso de que no se presenten dificultades con la notación, se intentará demostrar que los números conaturales forman un monoide concurrente con la suma y el máximo, demostrando la ley de intercambio para este conjunto que es una versión simplificada del tipo \textit{delay}. La implementación de números conaturales que se presenta a continuación está basada en \ref{} {\color{red} No encontré el link a la implementación}.
+En caso de que no se presenten dificultades con la notación, se intentará demostrar que los números conaturales forman un monoide concurrente con la suma y el máximo, demostrando la ley de intercambio para este conjunto que es una versión simplificada del tipo \textit{delay}. La implementación de números conaturales que se presenta a continuación está basada en el módulo \href{https://www.cse.chalmers.se/~nad/publications/danielsson-definitional-interpreters-looping/Conat.html}{\AgdaModule{Conat}} definido por Danielsson \cite{danielsson:2018}. 
 
 \subsection{Definición de los conaturales utilizando \textit{sized types}}\label{casodelay:sized:def}
 
