--- a/doc/tex/delay.tex
+++ b/doc/tex/delay.tex
@@ -2,7 +2,7 @@
 
 Como se discutió previamente, la teoría de tipos de Martin-Löf es un lenguaje de programación funcional rico con tipos dependientes y, a su vez, un sistema de lógica constructiva. Sin embargo, esto trae una limitación respecto de los lenguajes de programación funcional estándar, ya que obliga a que todas las computaciones deban terminar. Esta restricción tiene dos razones principales: hacer que el chequeo de tipos de los tipos dependientes sea decidible y representar pruebas como programas (una prueba que no termina es inconsistente). 
 
-El tipo de dato \textit{delay} fue introducido por Capretta \cite{capretta:2005} con el objetivo de facilitar la representación de la no-terminación de funciones en la teoría de tipos de Martin-Löf. Lo que busca es explotar los tipos coinductivos para modelar computaciones infinitas. Los habitantes del tipo \textit{delay} son valores ``demorados'', los cuales pueden no terminar y, por lo tanto, no retornar un valor nunca. El tipo de dato \textit{delay} es una mónada y constituye una alternativa constructiva de la mónada \textit{maybe}. 
+El tipo de dato \textit{delay} fue introducido por Capretta \cite{capretta:2005} con el objetivo de facilitar la representación de la no-terminación de funciones en la teoría de tipos de Martin-Löf. Lo que busca es explotar los tipos coinductivos para modelar computaciones infinitas. Los habitantes del tipo \textit{delay} son valores ``demorados'', los cuales pueden no terminar y, por lo tanto, no retornar un valor nunca. El tipo de dato \textit{delay} es una mónada y constituye una alternativa constructiva de la mónada \textit{maybe} \cite[\S 3]{capretta:2005}. 
 
 Se introducirá primero la noción de coinducción y un conjunto coinductivo muy especial: los números conaturales. Luego se presentará la definición de la mónada \textit{delay} y sus principales características. Finalmente, se describirán algunos de los distintos soportes para coinducción que Agda proporciona. 
 
