--- a/doc/main.tex
+++ b/doc/main.tex
@@ -61,7 +61,7 @@
 \include{tex/monconc}
 \include{tex/delay}
 
-\part{Formalización de Mónadas Concurrentes: el Caso de la Mónada Delay}\label{part:mc}
+\part{Formalización de Mónadas Concurrentes en Agda: el Caso de la Mónada Delay}\label{part:mc}
 
 \include{tex/form} 
 \include{tex/casodelay}
