--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -11,6 +11,14 @@
    year             = 2007,
    month	    = {September},
    address          = {SE-412 96 G\"{o}teborg, Sweden}}
+   
+@phdthesis{veltri:2017,
+  author = {Niccolò Veltri},
+  title = {A Type-Theoretical Study of Nontermination},
+  school = {Department of Software Science, School of Information Technologies, Tallinn University of Technology},
+  year = {2017},
+  month = {May}
+}
 
 @article{moggi:1991,
 	author		    = {Eugenio Moggi},
@@ -20,6 +28,16 @@
 	volume			= {93},
 	pages			= {55--92},
 	year			= {1991}}
+	
+@INPROCEEDINGS{moggi:1989,
+  author={Eugenio Moggi},
+  booktitle={[1989] Proceedings. Fourth Annual Symposium on Logic in Computer Science}, 
+  title={Computational lambda-calculus and monads}, 
+  year={1989},
+  pages={14-23},
+  doi={10.1109/LICS.1989.39155}
+}
+
 	
 @article{kock:1970,
 	author			= {Anders Kock},
@@ -190,3 +208,17 @@ author = {Jesse Hughes and Bart Jacobs},
   year={2018},
   url={https://www.cse.chalmers.se/~nad/publications/danielsson-definitional-interpreters-looping.html}
 }
+
+@inproceedings{wadler:1992,
+  author = {Philip Wadler},
+  title = {The Essence of Functional Programming},
+  year = {1992},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/143165.143169},
+  booktitle = {Proceedings of the 19th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  pages = {1–14},
+  numpages = {14},
+  series = {POPL '92}
+}
+
