referencia al codigo fuente

--- a/doc/tex/guia.tex
+++ b/doc/tex/guia.tex
@@ -1,1 +1,4 @@
 \chapter{Referencia al código fuente}
+
+El código fuente puede descargarse en el siguiente link: \href{https://github.com/ValeBini/Tesina/releases/tag/v1.0}{Código Tesina}. Allí se encuentra un archivo llamado \texttt{README.agda} que contiene un módulo \AgdaModule{README} donde se indica qué archivos se corresponden con cada parte del trabajo. La versión de Agda utilizada en el desarrollo del trabajo es la 2.6.1. 
+%https://github.com/ValeBini/Tesina/tree/final-code
