agrego resumen y agradecimientos

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -48,6 +48,9 @@
 \include{tex/resumen}
 \thispagestyle{empty}
 
+\include{tex/agradecimientos}
+\thispagestyle{empty}
+
 \setcounter{tocdepth}{1}
 \tableofcontents
 
@@ -79,7 +82,6 @@
 \addcontentsline{toc}{chapter}{\bibname}
 
 \begin{appendices}
-\include{tex/guia}
 \include{tex/apendice}
 \end{appendices}
 
