--- a/doc/tex/introduccion.tex
+++ b/doc/tex/introduccion.tex
@@ -68,3 +68,7 @@ El segundo es estudiar la mónada \textit{delay} y su implementación en Agda pa
 La tesina está dividida en dos partes. La primera, denominada Preliminares, contiene tres capítulos que exponen el marco teórico que fue utilizado para el desarrollo de este trabajo. En el primero de ellos se da una introducción al lenguaje Agda, describiendo sus principales características y mostrando ejemplos de uso. El segundo presenta una introducción teórica a las mónadas concurrentes, partiendo de la teoría de categorías sobre la cual se definen las mónadas y luego yendo a lo más específico hasta dar el concepto de mónada concurrente y sus principales características. Por último, en el tercero se introduce la noción de coinducción y la definición y propiedades de la mónada \textit{delay}. 
 
 En la segunda parte, cuyo título coincide con el de la tesina, se pueden encontrar dos capítulos. Cada capítulo se corresponde con uno de los objetivos del trabajo. En el primero se da la formalización de diversas estructuras algebraicas, partiendo desde algunas más básicas como los monoides, las mónadas y los funtores monoidales para luego llegar a las más complejas que son la meta de este trabajo: los monoides concurrentes y las mónadas concurrentes. Para cada estructura se explica cada uno de los campos introducidos y se hace un paralelismo con el marco teórico para que quede clara la relación entre la teoría y la formalización. En el siguiente capítulo se analiza el caso de la mónada \textit{delay}. Primero se define el tipo \textit{delay} en Agda junto con varias funciones útiles para manipularlo. Luego se prueba que este puede dotarse de una estructura de mónada y también de funtor monoidal utilizando las formalizaciones definidas. Finalmente, se intenta probar o refutar que este puede dotarse de una estructura de mónada concurrente.
+
+\section{Código fuente}
+
+El código fuente del trabajo puede descargarse en el siguiente link: \href{https://github.com/ValeBini/Tesina/releases/tag/v1.0}{Código Tesina}. Dentro de la carpeta se encuentra un archivo llamado \texttt{README.agda} que contiene un módulo \AgdaModule{README} en el que se indica qué archivos se corresponden con cada parte del trabajo. La versión de Agda que se utilizó en el desarrollo de esta tesina es la v2.6.1. 
