--- a/doc/tex/apendice.tex
+++ b/doc/tex/apendice.tex
@@ -10,7 +10,7 @@ La estructura de funtor monoidal para el mismo tipo de dato fue introducida en l
 
 \ExecuteMetaData[latex/Instances/Monoidal.tex]{strong}
 
-\section{Lemas para la prueba de interchange para conaturales con notación musical}\label{apendice:lemasmus}
+\section{Los conaturales con notación musical: lemas auxiliares}\label{apendice:lemasmus}
 
 Los siguientes lemas se utilizan en la sección \ref{casodelay:conat:ichange} para mostrar los intentos de prueba de la ley de intercambio para números conaturales definidos con notación musical. 
 
@@ -29,7 +29,7 @@ Los lemas \AgdaFunction{maxzero$_1$}, \AgdaFunction{maxzero$_2$}, \AgdaFunction{
 Análogamente, \AgdaFunction{$\gtrsim$max} prueba que \AgdaFunction{max} es compatible con la relación de orden, utilizando \AgdaFunction{$\gtrsim$maxzero} para el caso en que \AgdaBound{n$_2$} $=$ \AgdaInductiveConstructor{zero}:
 \ExecuteMetaData[latex/ConaturalsM.tex]{maxcong}
 
-\section{Lemas para probar que los conaturales con \textit{sized types} forman un monoide concurrente}\label{apendice:lemassz}
+\section{Los conaturales con \textit{sized types}: lemas auxiliares}\label{apendice:lemassz}
 
 Los lemas que se presentan a continuación se utlizan en la sección \ref{casodelay:sized:concurrent} para probar que los números conaturales bajo la representación que utiliza \textit{sized types} forman un monoide concurrente.
 
